--- a/application/src/app/registerclient/registerclient.component.html
+++ b/application/src/app/registerclient/registerclient.component.html
@@ -1,52 +1,55 @@
+<div class="container mt-5">
 <div class="row">
     <div class="col-lg mx-auto">
       <div class="card rouded-0">       
         <div class="card-body">
+          <h5 class="card-title border-bottom">Cadastro </h5>
           <form class="form">
             <div class="row">
             <div class="form-group col-md-1">
-              <label for="">ID</label>
-              <input [(ngModel)]="registerUserData.id" name="id" type="text" class="form-control rounded-0" required> 
+              <label for="">Id:</label>
+              <input [(ngModel)]="registerUserData.id" name="id" type="number" class="form-control rounded-0" required> 
             </div>
             <div class="form-group col-md-11">
-              <label for="">Nome</label>
+              <label for="">Nome:</label>
               <input [(ngModel)]="registerUserData.nome" name="nome" type="text" class="form-control rounded-0" required> 
             </div>
             </div>
             <div class="row"> 
             <div class="form-group col-md-11">
-              <label for="">Email</label>
+              <label for="">Email:</label>
               <input [(ngModel)]="registerUserData.email" name="email" type="email" class="form-control rounded-0" required email> 
             </div>
             <div class="form-group col-md-1">
-                <label for="">Idade</label>
+                <label for="">Idade:</label>
                 <input [(ngModel)]="registerUserData.idade" name="idade" type="number" class="form-control rounded-0" required> 
             </div>
           </div>
-          
+          <div class="row">
             <div class="form-group col-md-6">
                 <label for="">Login</label>
                 <input [(ngModel)]="registerUserData.login" name="login" type="text" class="form-control rounded-0" required> 
             </div>
-            <div class="form-group col-md-6">
-                <label for="">Senha</label>
-                <input [(ngModel)]="registerUserData.senha" name="senha" type="password" class="form-control rounded-0" required> 
-            </div>
-              
-              
-              <div class="form-group col-sm-2">
+            <div class="form-group col-sm-2">
                 <label>Status:</label>
                   <div class="form-control">
                     <label class="checkbox-inline">
-                      <input type="checkbox" name="isActive" [(ngModel)]="registerUserData.status" > Ativo
+                      <input type="checkbox" name="isActive" [(ngModel)]="registerUserData.isActive" > Ativo
                       </label>
                     </div>
-                  </div>     
-              
-              <button (click)="registerUser()" type="button" class="btn btn-primary float-left ml-3">Cadastrar</button>
-              
+                  </div> 
+          </div>
+          <div class="row">
+            <div class="form-group col-auto mr-auto">
+                <label for="">Senha:</label>
+                <input [(ngModel)]="registerUserData.senha" name="senha" type="password" class="form-control rounded-0" required> 
+            </div>
+            <button (click)="registerUser()" type="button" class="col-auto btn btn-primary mr-5 float-right" style="height: 50px;" >Cadastrar</button>
+          </div>
+
           </form>
         </div>
       </div>
     </div>  
   </div>
+</div>
